k8s/20-db.yaml
# Deployment (runs postgres)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: xeffect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data

      
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: db-svc          
  namespace: xeffect
spec:
  selector:
    app: db
  ports:
  - port: 5432
    targetPort: 5432
