k8s/50-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xeffect-ingress
  namespace: xeffect
spec:
  ingressClassName: nginx
  rules:
  - host: xeffect.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 5173


  - host: localhost
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /docs
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 4000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 5173
